# lp_simplex

./: .gitignore  CMakeLists.txt  README.md
include/lp_simplex/: lp.h  lp_simplex.h  lp_simplex_magics.h  lp_simplex_utils.h
src/: lp_simplex_bsc.c  lp_simplex_gen.c  lp_simplex_std.c  lp_simplex_utils.c  utils.c
test/: CMakeLists.txt  test_lp_simplex_1.c  test_lp_simplex_2.c  test_lp_simplex_3.c  test_lp_simplex_4.c  test_lp_simplex_5.c  test_lp_simplex_6.c  test_lp_simplex_7.c
